fix: core layout css gap shim

--- a/packages/core/src/styles/module.shims.scss
+++ b/packages/core/src/styles/module.shims.scss
@@ -1,4 +1,4 @@
-// Copyright (c) 2016-2020 VMware, Inc. All Rights Reserved.
+// Copyright (c) 2016-2021 VMware, Inc. All Rights Reserved.
 // This software is released under MIT license.
 // The full license information can be found in LICENSE in the root directory of this project.
 
@@ -10,6 +10,6 @@
 @import './layout/shims/gap';
 
 // older safari
-@media not all and (min-resolution: 0.001dpcm) {
+[cds-supports~='no-flex-gap'] {
   @include generateGapShim();
 }
